--- a/style.css
+++ b/style.css
@@ -1,1 +1,10 @@
 /* Start coding here */
+input #email {
+  color: lightgray;
+}
+input:hover {
+  border-color: khaki;
+}
+button:hover {
+  background-color: pink;
+}
